--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ quarkus.log.level=DEBUG
 # configuration for users
 quarkus.cache.redis.users.value-type=java.util.List
 quarkus.redis.hosts=redis://localhost:6379
+quarkus.cache.redis.expire-after-write=60s
